se limpian las imagenes

--- a/tecno.html
+++ b/tecno.html
@@ -385,7 +385,7 @@
                         <div class="col-lg-6 col-md-12 wow zoomIn" data-wow-delay="0.5s">
                             <a class="position-relative d-block overflow-hidden" href="" data-bs-toggle="modal"
                                 data-bs-target="#server">
-                                <img class="img-fluid" src="img/cat-3.jpg" alt="">
+                                <img class="img-fluid" src="img/servidor.jpg" alt="">
                                 <div class="bg-white text-center position-absolute bottom-0 end-0 py-2 px-3"
                                     style="margin: 1px;">
                                     <h5 class="m-0">Servidores personalizados</h5>
@@ -407,7 +407,7 @@
                                         <div class=" fadeInUp" data-wow-delay="0.1s">
                                             <div class="service-item text-center pt-3">
                                                 <div class="p-4">
-                                                    <img class="card-img-top img-fluid mb-3" src="img/cable.jpg"
+                                                    <img class="card-img-top img-fluid mb-3" src="img/servidores2.jpg"
                                                         alt="" />
                                                     <h5 class="mb-3">Servidores personalizados</h5>
                                                     <p>
