Se instaruan animaciones

--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="row g-4">
-                <div class="row text-center">
+                <div class="row text-center wow fadeInDown">
                     <h2 class="fs-1 ">Aliado estrategico</h2>
                     <p class="fs-3 ">Contamos con grandes soluciones divididas en 3 áreas</p>
                 </div>
-                <div class="col-lg-4 col-md-12 col-sm-12 fadeInUp" data-wow-delay="0.1s">
+                <div class="col-lg-4 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item text-center pt-3">
                         <div class="p-4">
                             <img class="card-img-top img-fluid mb-3" src="img/tecno.png" alt="" />
@@ -166,7 +166,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-12 col-sm-12 fadeInUp" data-wow-delay="0.3s">
+                <div class="col-lg-4 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item text-center pt-3">
                         <div class="p-4">
                             <img class="card-img-top img-fluid  mb-3" src="img/control.jpg" alt="" />
@@ -177,7 +177,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-12 col-sm-12 fadeInUp" data-wow-delay="0.5s">
+                <div class="col-lg-4 col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="service-item text-center pt-3">
                         <div class="p-4">
                             <img class="card-img-top img-fluid mb-3" src="img/elec.jpg" alt="" />
@@ -199,13 +199,13 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="row g-5">
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 400px;">
+                <div class="col-lg-6 wow  fadeInUp" data-wow-delay="0.1s" style="min-height: 400px;">
                     <div class="position-relative h-100">
                         <img class="img-fluid position-absolute w-100 h-100" src="img/aliado.jpg" alt=""
                             style="object-fit: cover;">
                     </div>
                 </div>
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
+                <div class="col-lg-6 wow  fadeInUp" data-wow-delay="0.3s">
                     <h6 class="section-title bg-white text-start text-primary pe-3">Valores</h6>
                     <h1 class="mb-4">Como trabajamos</h1>
                     <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et
@@ -247,12 +247,12 @@
     <!-- inicia contacto -->
     <div class="container-xxl py-5">
         <div class="container">
-            <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
+            <div class="text-center wow  fadeInUp" data-wow-delay="0.1s">
                 <h6 class="section-title bg-white text-center text-primary px-3">Platiquemos</h6>
                 <h1 class="mb-5">Conctactanos</h1>
             </div>
             <div class="row g-4">
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                <div class="col-lg-4 col-md-6 wow  fadeInUp" data-wow-delay="0.1s">
                     <h5>¿Tienes dudas?</h5>
                     <p class="mb-4">En BSTECH estamos para escucharte. Cuentanos sobre tu proyecto y nosotros
                         trabajaremos para ti.</p>
@@ -287,13 +287,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                <div class="col-lg-4 col-md-6 wow animated fadeInUp" data-wow-delay="0.3s">
                     <iframe class="position-relative rounded w-100 h-100"
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3762.5469459362794!2d-99.13561408551604!3d19.431971586884597!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1fecd46f7d787%3A0xb1ca18d279276c31!2sP.za%20de%20la%20Constituci%C3%B3n%2C%20Centro%20Hist%C3%B3rico%20de%20la%20Cdad.%20de%20M%C3%A9xico%2C%20Centro%2C%20Ciudad%20de%20M%C3%A9xico%2C%20CDMX!5e0!3m2!1ses-419!2smx!4v1646159732070!5m2!1ses-419!2smx"
                         frameborder="0" style="min-height: 300px; border:0;" allowfullscreen="" aria-hidden="false"
                         tabindex="0"></iframe>
                 </div>
-                <div class="col-lg-4 col-md-12 wow fadeInUp" data-wow-delay="0.5s">
+                <div class="col-lg-4 col-md-12 wow animated fadeInUp" data-wow-delay="0.5s">
                     <form>
                         <div class="row g-3">
                             <div class="col-md-6">
@@ -335,7 +335,7 @@
 
 
     <!-- Nuestros Partners -->
-    <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
+    <div class="container-xxl py-5 wow animated fadeInUp" data-wow-delay="0.1s">
         <div class="container">
             <div class="text-center">
                 <h6 class="section-title bg-white text-center text-primary px-3">Socios</h6>
@@ -390,7 +390,7 @@
 
     <!--Inicia Footer -->
 
-    <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow animated fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-6 col-md-6">
@@ -439,6 +439,7 @@
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="lib/wow/wow.min.js"></script>
     <script src="lib/easing/easing.min.js"></script>
     <script src="lib/waypoints/waypoints.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
