Compilacion de SASS

--- a/control.html
+++ b/control.html
@@ -76,7 +76,7 @@
 
 
     <!-- Inicia Banner-->
-    <div class="container-fluid bg-primary py-5 mb-5 page-header-tele">
+    <div class="container-fluid bg-primary py-5 mb-5 page-header-control">
         <div class="container py-5">
             <div class="row justify-content-center">
                 <div class="col-lg-10 text-center">
