--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
    <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
     <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
         <h2 class="m-0 text-primary"><img src="img/logo.png" alt="" width="50" height="50"
-                class="d-inline-block align-text-top"></i>BS-TECH</h2>
+                class="d-inline-block align-text-top active"></i>BS-TECH</h2>
     </a>
     <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
