--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>BS-TECH</title>
+    <title>BS-TECH Index</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <meta content="tecnologia, venta, automatizacion, servicio, electricidad, control, automatizacion, IT, cotizacion " name="keywords">
+    <meta content="Soluciones de tecnología para diversas industrias y giros empresariale" name="description">
 
     <!-- Icono de barra -->
     <link href="img/favicon.ico" rel="icon">
@@ -47,15 +47,15 @@
    <!-- inicia nav bar -->
    <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
     <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-        <h2 class="m-0 text-primary"><img src="img/logo.png" alt="" width="50" height="50"
-                class="d-inline-block align-text-top active"></i>BS-TECH</h2>
+        <h2 class="m-0 text-primary"><img src="img/logo.png" alt="Logo de BSTECH" 
+                class="d-inline-block align-text-top logo-dimen "></i>BS-TECH</h2>
     </a>
     <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto p-4 p-lg-0">
-            <a href="index.html" class="nav-item nav-link active ">Home</a>
+            <a href="index.html" class="nav-item nav-link active">Home</a>
             <a href="nosotros.html" class="nav-item nav-link ">Nosotros</a>
             <div class="nav-item dropdown">
                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Servicios</a>
@@ -236,7 +236,7 @@
                             </p>
                         </div>
                     </div>
-                    <a class="btn btn-primary py-3 px-5 mt-2" href="">Compromiso</a>
+                    <a class="btn btn-primary py-3 px-5 mt-2" href="nosotros.html">Compromiso</a>
                 </div>
             </div>
         </div>
@@ -395,9 +395,9 @@
             <div class="row g-5">
                 <div class="col-lg-6 col-md-6">
                     <h4 class="text-white mb-3">Accesos rapidos</h4>
-                    <a class="btn btn-link" href="">Nosotros</a>
-                    <a class="btn btn-link" href="">Contacto</a>
-                    <a class="btn btn-link" href="">Aviso de privacidad</a>
+                    <a class="btn btn-link" href="nosotros.html">Nosotros</a>
+                    <a class="btn btn-link" href="contacto.html">Contacto</a>
+                    <a class="btn btn-link" href="privasidad.html">Aviso de privacidad</a>
                 </div>
                 <div class="col-lg-6 col-md-6">
                     <h4 class="text-white mb-3">Contacto</h4>
@@ -405,10 +405,10 @@
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>55 55 55 55 55</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>contacto@bstech.mx</p>
                     <div class="d-flex pt-2">
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-outline-light btn-social" href="https://twitter.com/?lang=en"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-outline-light btn-social" href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
+                        <a class="btn btn-outline-light btn-social" href="https://www.linkedin.com/"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
                
