--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!-- Elemento cargar -->
     <div id="spinner"
         class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
-        <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
+        <div class="spinner-border text-primary spinner-dimen"  role="status">
             <span class="sr-only">Cargando pagina...</span>
         </div>
     </div>
